--- a/apps/base/dev-argo-events/deploy/patches/controller-manager-deployment.yaml
+++ b/apps/base/dev-argo-events/deploy/patches/controller-manager-deployment.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
         - name: controller-manager
           imagePullPolicy: IfNotPresent
+          securityContext:
+            allowPrivilegeEscalation: false
+            seccompProfile:
+              type: RuntimeDefault
+            capabilities:
+              drop:
+                - ALL
           resources:
             requests:
               cpu: 50m
