--- a/apps/base/dev-argo-workflows/deploy/manifests/base/argo-server/argo-server-deployment.yaml
+++ b/apps/base/dev-argo-workflows/deploy/manifests/base/argo-server/argo-server-deployment.yaml
@@ -2,26 +2,19 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: argo-server
-  labels:
-    app.kubernetes.io/name: argo-workflows
-    app.kubernetes.io/component: argo-server
-  annotations:
-    reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: argo-workflows
-      app.kubernetes.io/component: argo-server
+      app: argo-server
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: argo-workflows
-        app.kubernetes.io/component: argo-server
+        app: argo-server
     spec:
       serviceAccountName: argo-server
       containers:
         - name: argo-server
-          image: "registry.lan/argo-workflow-cli:v3.4.7"
+          image: quay.io/argoproj/argocli:latest
           securityContext:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
@@ -29,9 +22,7 @@ spec:
             capabilities:
               drop:
                 - ALL
-          args: 
-            - server
-            - --auth-mode=server
+          args: [ server ]
           env: []
           ports:
             - name: web
@@ -43,27 +34,13 @@ spec:
               path: /
             initialDelaySeconds: 10
             periodSeconds: 20
-          resources:
-            requests:
-              cpu: 50m
-              memory: 64Mi
-            limits:
-              cpu: 250m
-              memory: 64Mi
           volumeMounts:
-            - name: tz-config
-              mountPath: /etc/localtime
-              readOnly: true
             - mountPath: /tmp
               name: tmp
       volumes:
-        - name: tz-config
-          hostPath:
-            path: /etc/localtime
         - name: tmp
           emptyDir: { }
       securityContext:
         runAsNonRoot: true
       nodeSelector:
         kubernetes.io/os: linux
-        capability/general-purpose: 'yes'
