--- a/apps/base/dev-argo-workflows/deploy/manifests/base/workflow-controller/workflow-controller-deployment.yaml
+++ b/apps/base/dev-argo-workflows/deploy/manifests/base/workflow-controller/workflow-controller-deployment.yaml
@@ -2,27 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: workflow-controller
-  labels:
-    app.kubernetes.io/name: argo-workflows
-    app.kubernetes.io/component: workflow-controller
-  annotations:
-    reloader.stakater.com/auto: "true"
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: argo-workflows
-      app.kubernetes.io/component: workflow-controller
+      app: workflow-controller
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: argo-workflows
-        app.kubernetes.io/component: workflow-controller
+        app: workflow-controller
     spec:
       priorityClassName: workflow-controller
       serviceAccountName: argo
       containers:
         - name: workflow-controller
-          image: "registry.lan/argo-workflow-controller:v3.4.7"
+          image: quay.io/argoproj/workflow-controller:latest
           securityContext:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
@@ -52,23 +45,7 @@ spec:
             initialDelaySeconds: 90
             periodSeconds: 60
             timeoutSeconds: 30
-          resources:
-            requests:
-              cpu: 50m
-              memory: 64Mi
-            limits:
-              cpu: 250m
-              memory: 64Mi
-          volumeMounts:
-          - name: tz-config
-            mountPath: /etc/localtime
-            readOnly: true
-      volumes:
-      - name: tz-config
-        hostPath:
-          path: /etc/localtime
       securityContext:
         runAsNonRoot: true
       nodeSelector:
         kubernetes.io/os: linux
-        capability/general-purpose: 'yes'
