--- a/apps/base/dev-argo-workflows/deploy/manifests/namespace-install/kustomization.yaml
+++ b/apps/base/dev-argo-workflows/deploy/manifests/namespace-install/kustomization.yaml
@@ -2,11 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../base
-- ./workflow-controller-rbac
-- ./argo-server-rbac
+  - ../base
+  - ./argo-server-rbac
+  - ./workflow-controller-rbac
 
-patches:
+patchesJson6902:
   - target:
       version: v1
       group: apps
