Configure pod-security for dev-argo-workflows

--- a/apps/base/dev-argo-workflows/deploy/patches/argo-server-deployment.yaml
+++ b/apps/base/dev-argo-workflows/deploy/patches/argo-server-deployment.yaml
@@ -20,6 +20,9 @@ spec:
           args: 
             - server
             - --auth-mode=server
+          securityContext:
+            seccompProfile:
+              type: RuntimeDefault
           resources:
             requests:
               cpu: 50m
