--- a/apps/base/dev-argo-workflows/deploy/patches/workflow-controller-deployment.yaml
+++ b/apps/base/dev-argo-workflows/deploy/patches/workflow-controller-deployment.yaml
@@ -21,6 +21,9 @@ spec:
       containers:
         - name: workflow-controller
           imagePullPolicy: IfNotPresent
+          securityContext:
+            seccompProfile:
+              type: RuntimeDefault
           resources:
             requests:
               cpu: 50m
