--- a/apps/base/download-deluge/deploy/daemon/daemon-statefulSet.yaml
+++ b/apps/base/download-deluge/deploy/daemon/daemon-statefulSet.yaml
@@ -15,16 +15,28 @@ spec:
         app.kubernetes.io/name: deluge
         app.kubernetes.io/component: deluge-daemon
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000 # deluge
+        fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       initContainers:
       - name: create-folders
-        image: "registry.lan/deluge-busybox:1.36.0"
+        image: "registry.lan/deluge-daemon:2.1.1_1.2.14-alpine"
         imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
           - |
             mkdir -p /opt/deluge/config
-            chown -R 1000:1000 /opt/deluge/config
+        securityContext:
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         volumeMounts:
         - name: deluge-data
           mountPath: /opt/deluge
@@ -39,9 +51,11 @@ spec:
         - configMapRef:
             name: deluge-daemon-env
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 1000 # deluge
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         readinessProbe:
           tcpSocket:
             port: daemon
