--- a/apps/base/download-pyload/deploy/statefulSet.yaml
+++ b/apps/base/download-pyload/deploy/statefulSet.yaml
@@ -24,7 +24,7 @@ spec:
           type: RuntimeDefault
       initContainers:
       - name: create-folders
-        image: "registry.lan/pyload-busybox:1.36.0"
+        image: "registry.lan/pyload-ng:0.5.0b3.dev68-3.11.2-slim-bullseye"
         imagePullPolicy: IfNotPresent
         command:
           - "sh"
