Configure pod-security for home-esphome

--- a/apps/base/home-esphome/deploy/statefulSet.yaml
+++ b/apps/base/home-esphome/deploy/statefulSet.yaml
@@ -17,16 +17,28 @@ spec:
       annotations:
         k8s.v1.cni.cncf.io/networks: "kube-system/k8s-bridge"
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000 # esp
+        fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       initContainers:
       - name: create-folders
-        image: "registry.lan/esphome-busybox:1.36.0"
+        image: "registry.lan/esphome:2023.3.2"
         imagePullPolicy: IfNotPresent
         command:
           - "sh"
           - "-c"
           - |
             mkdir -p /esphome/config
-            chown -R 1000:1000 /esphome/config
+        securityContext:
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         volumeMounts:
         - name: esphome-data
           mountPath: /esphome
@@ -38,9 +50,11 @@ spec:
         - containerPort: 6052
           name: http
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 1000 # esp
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         readinessProbe:
           httpGet:
             scheme: HTTP
