--- a/apps/base/home-homeassistant/deploy/namespace.yaml
+++ b/apps/base/home-homeassistant/deploy/namespace.yaml
@@ -1,4 +1,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: home-frigate
+  name: home-homeassistant
+  labels:
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/warn: restricted
