--- a/apps/base/home-roomassistant/deploy/deployment.yaml
+++ b/apps/base/home-roomassistant/deploy/deployment.yaml
@@ -18,6 +18,13 @@ spec:
         app.kubernetes.io/name: roomassistant
         app.kubernetes.io/component: roomassistant
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000 # node
+        fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: roomassistant
         image: "registry.lan/room-assistant:2.20.0-custom"
@@ -32,10 +39,11 @@ spec:
         - containerPort: 6415
           name: http
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 1000 # node
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
           capabilities:
+            drop:
+              - ALL
             add:
             - NET_RAW
             - NET_ADMIN
