--- a/apps/base/infra-blocky/deploy/postgres/statefulSet.yaml
+++ b/apps/base/infra-blocky/deploy/postgres/statefulSet.yaml
@@ -15,19 +15,13 @@ spec:
         app.kubernetes.io/name: blocky
         app.kubernetes.io/component: pgsql
     spec:
-      initContainers:
-      - name: create-folders
-        image: "registry.lan/blocky-busybox:1.36.0"
-        imagePullPolicy: IfNotPresent
-        command:
-          - "sh"
-          - "-c"
-          - |
-            mkdir -p /var/lib/postgresql/data
-            chown -R 70:70 /var/lib/postgresql/data
-        volumeMounts:
-        - name: pgsql-data
-          mountPath: /var/lib/postgresql
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 70 # postgres
+        fsGroup: 70
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: pgsql
         image: "registry.lan/blocky-postgres:15.2-alpine3.17"
@@ -39,9 +33,11 @@ spec:
         - containerPort: 5432
           name: pgsql
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 70 # postgres
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         readinessProbe:
            exec:
               command:
