--- a/apps/base/infra-blocky/deploy/redis/statefulSet.yaml
+++ b/apps/base/infra-blocky/deploy/redis/statefulSet.yaml
@@ -15,6 +15,13 @@ spec:
         app.kubernetes.io/name: blocky
         app.kubernetes.io/component: redis
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 999 # redis
+        fsGroup: 1000 # redis (yes, uid != gid)
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: redis
         image: "registry.lan/blocky-redis:7.0.8-alpine3.17"
@@ -26,10 +33,11 @@ spec:
         - containerPort: 6379
           name: redis
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 999
-          runAsGroup: 1000
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         readinessProbe:
           exec:
             command:
