--- a/apps/base/infra-crowdsec/deploy/namespace.yaml
+++ b/apps/base/infra-crowdsec/deploy/namespace.yaml
@@ -2,3 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: infra-crowdsec
+  labels:
+    # LAPI supports restricted, but agents need to mount host volumes
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/audit: privileged
+    pod-security.kubernetes.io/warn: privileged
