--- a/apps/base/infra-crowdsec/deploy/agent/daemonSet.yaml
+++ b/apps/base/infra-crowdsec/deploy/agent/daemonSet.yaml
@@ -17,6 +17,14 @@ spec:
         app.kubernetes.io/name: crowdsec
         app.kubernetes.io/component: agent
     spec:
+      securityContext:
+        # Run as root to be able to read host logs
+        runAsNonRoot: false
+        #runAsUser: 65534 # nobody
+        #fsGroup: 65534
+        #fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       initContainers:
       - name: wait-for-requirements
         image: "registry.lan/crowdsec-busybox:1.36.0"
@@ -35,6 +43,12 @@ spec:
               echo "FAILED : LAPI isn't available"
               exit 1
             fi
+        securityContext:
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
       containers:
       - name: agent
         image: "registry.lan/crowdsec:v1.4.6-debian"
@@ -46,12 +60,11 @@ spec:
         - containerPort: 6060
           name: metrics
         securityContext:
-          # Run as root to be able to read host logs
-          #runAsNonRoot: true
-          #runAsUser: 65534 # nobody
-          readOnlyRootFilesystem: true          
+          readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
-          privileged: false
+          capabilities:
+            drop:
+              - ALL
         resources:
           requests:
             cpu: 50m
