--- a/apps/base/infra-gandi-livedns/deploy/cronJob.yaml
+++ b/apps/base/infra-gandi-livedns/deploy/cronJob.yaml
@@ -13,6 +13,13 @@ spec:
             app.kubernetes.io/name: gandi-livedns
             app.kubernetes.io/component: gandi-livedns
         spec:
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000 # gandi
+            fsGroup: 1000
+            fsGroupChangePolicy: "OnRootMismatch"
+            seccompProfile:
+              type: RuntimeDefault
           restartPolicy: Never
           containers:
           - name: gandi-livedns
@@ -25,10 +32,11 @@ spec:
             - name: REFRESH_INTERVAL
               value: "0"
             securityContext:
-              runAsNonRoot: true
-              runAsUser: 1000 # gandi
-              runAsGroup: 1000 # gandi
               readOnlyRootFilesystem: true
+              allowPrivilegeEscalation: false
+              capabilities:
+                drop:
+                  - ALL
             resources:
               requests:
                 cpu: 25m
