Configure pod-security for infra-kubernetes-dashboard

--- a/apps/base/infra-kubernetes-dashboard/deploy/dashboard-ingress.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/dashboard-ingress.yaml
@@ -25,4 +25,4 @@ spec:
           service:
             name: kubernetes-dashboard
             port:
-              name: https
+              number: 443
