--- a/apps/base/infra-kubernetes-dashboard/deploy/kustomization.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/kustomization.yaml
@@ -9,9 +9,23 @@ labels:
       app.kubernetes.io/name: kubernetes-dashboard
 
 resources:
-- namespace.yaml
+- manifests/00_dashboard-namespace.yaml
 - ../../_common/deploy
-- dashboard
-- metrics-scraper
-- serviceAccount.yaml
+- manifests/01_dashboard-serviceaccount.yaml
+- manifests/02_dashboard-service.yaml
+- manifests/03_dashboard-secret.yaml
+- manifests/04_dashboard-configmap.yaml
+- manifests/05_dashboard-rbac.yaml
+- manifests/06_dashboard-deployment.yaml
+- manifests/07_scraper-service.yaml
+- manifests/08_scraper-deployment.yaml
+- dashboard-ingress.yaml
+- dashboard-networkPolicy.yaml
+- scraper-networkPolicy.yaml 
 - clusterRoleBinding.yaml
+- serviceAccount.yaml
+
+patches:
+- path: patches/namespace.yaml
+- path: patches/dashboard-deployment.yaml
+- path: patches/scraper-deployment.yaml
