--- a/apps/base/infra-kubernetes-dashboard/deploy/manifests/06_dashboard-deployment.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/manifests/06_dashboard-deployment.yaml
@@ -1,66 +1,67 @@
+# Copyright 2017 The Kubernetes Authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 kind: Deployment
 apiVersion: apps/v1
 metadata:
+  labels:
+    k8s-app: kubernetes-dashboard
   name: kubernetes-dashboard
+  namespace: kubernetes-dashboard
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app.kubernetes.io/name: kubernetes-dashboard
-      app.kubernetes.io/component: dashboard
+      k8s-app: kubernetes-dashboard
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: kubernetes-dashboard
-        app.kubernetes.io/component: dashboard
+        k8s-app: kubernetes-dashboard
     spec:
       securityContext:
         seccompProfile:
           type: RuntimeDefault
       containers:
         - name: kubernetes-dashboard
-          image: "registry.lan/kubernetes-dashboard:v2.7.0"
-          imagePullPolicy: IfNotPresent
+          image: kubernetesui/dashboard:v2.7.0
+          imagePullPolicy: Always
           ports:
-            - name: https
-              containerPort: 8443
+            - containerPort: 8443
               protocol: TCP
           args:
             - --auto-generate-certificates
-            - --namespace=infra-kubernetes-dashboard
+            - --namespace=kubernetes-dashboard
             # Uncomment the following line to manually specify Kubernetes API server Host
             # If not specified, Dashboard will attempt to auto discover the API server and connect
             # to it. Uncomment only if the default does not work.
             # - --apiserver-host=http://my-address:port
-          resources:
-            requests:
-              cpu: 50m
-              memory: 128Mi
-            limits:
-              cpu: 500m
-              memory: 256Mi
           volumeMounts:
             - name: kubernetes-dashboard-certs
               mountPath: /certs
               # Create on-disk volume to store exec logs
             - mountPath: /tmp
               name: tmp-volume
-          readinessProbe:
-            httpGet:
-              scheme: HTTPS
-              path: /
-              port: https
           livenessProbe:
             httpGet:
               scheme: HTTPS
               path: /
-              port: https
+              port: 8443
             initialDelaySeconds: 30
             timeoutSeconds: 30
           securityContext:
             allowPrivilegeEscalation: false
-            runAsNonRoot: true
             readOnlyRootFilesystem: true
             runAsUser: 1001
             runAsGroup: 2001
@@ -71,11 +72,8 @@ spec:
         - name: tmp-volume
           emptyDir: {}
       serviceAccountName: kubernetes-dashboard
-      imagePullSecrets:
-      - name: docker-config
       nodeSelector:
         "kubernetes.io/os": linux
-        capability/general-purpose: 'yes'
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
         - key: node-role.kubernetes.io/master
