--- a/apps/base/infra-kubernetes-dashboard/deploy/manifests/08_scraper-deployment.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/manifests/08_scraper-deployment.yaml
@@ -1,50 +1,49 @@
+# Copyright 2017 The Kubernetes Authors.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 kind: Deployment
 apiVersion: apps/v1
 metadata:
+  labels:
+    k8s-app: dashboard-metrics-scraper
   name: dashboard-metrics-scraper
+  namespace: kubernetes-dashboard
 spec:
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app.kubernetes.io/name: kubernetes-dashboard
-      app.kubernetes.io/component: metrics-scraper
+      k8s-app: dashboard-metrics-scraper
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: kubernetes-dashboard
-        app.kubernetes.io/component: metrics-scraper
+        k8s-app: dashboard-metrics-scraper
     spec:
       securityContext:
         seccompProfile:
           type: RuntimeDefault
       containers:
         - name: dashboard-metrics-scraper
-          image: "registry.lan/kubernetes-metrics-scraper:v1.0.6"
-          imagePullPolicy: IfNotPresent
+          image: kubernetesui/metrics-scraper:v1.0.8
           ports:
-            - name: http
-              containerPort: 8000
+            - containerPort: 8000
               protocol: TCP
-          resources:
-            requests:
-              cpu: 25m
-              memory: 16Mi
-            limits:
-              cpu: 250m
-              memory: 32Mi
-          readinessProbe:
-            httpGet:
-              scheme: HTTP
-              path: /
-              port: http
-            initialDelaySeconds: 30
-            timeoutSeconds: 30
           livenessProbe:
             httpGet:
               scheme: HTTP
               path: /
-              port: http
+              port: 8000
             initialDelaySeconds: 30
             timeoutSeconds: 30
           volumeMounts:
@@ -52,16 +51,12 @@ spec:
             name: tmp-volume
           securityContext:
             allowPrivilegeEscalation: false
-            runAsNonRoot: true
             readOnlyRootFilesystem: true
             runAsUser: 1001
             runAsGroup: 2001
       serviceAccountName: kubernetes-dashboard
-      imagePullSecrets:
-      - name: docker-config
       nodeSelector:
         "kubernetes.io/os": linux
-        capability/general-purpose: 'yes'
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
         - key: node-role.kubernetes.io/master
