--- a/apps/vagrant/infra-kubernetes-dashboard/deploy/scraper-deployment-resources.yaml
+++ b/apps/vagrant/infra-kubernetes-dashboard/deploy/scraper-deployment-resources.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: dashboard-metrics-scraper
+  namespace: kubernetes-dashboard
 spec:
   replicas: 1
   template:
