--- a/apps/base/infra-kubernetes-metrics-server/deploy/kustomization.yaml
+++ b/apps/base/infra-kubernetes-metrics-server/deploy/kustomization.yaml
@@ -1,6 +1,33 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: infra-kubernetes-metrics-server
+
+labels:
+  - includeSelectors: false
+    pairs:
+      app.kubernetes.io/name: metrics-server
+      app.kubernetes.io/component: metrics-server
+      app.kubernetes.io/version: v0.6.3
+
 resources:
-- kube-system-rbac
-- kubernetes-metrics-server
+- namespace.yaml
+- ../../_common/deploy
+- manifests/release
+- networkPolicy.yaml
+
+patches:
+- path: patches/deployment.yaml
+
+# Only workd with patchesJson6902, not with patches (see https://github.com/kubernetes-sigs/kustomize/issues/880#issuecomment-1681184310)
+patchesJson6902:
+- target:
+    kind: RoleBinding
+    name: metrics-server-auth-reader
+  patch: |-
+    - op: replace
+      path: /metadata/namespace
+      value: kube-system
+    - op: replace
+      path: /subjects/0/namespace
+      value: infra-kubernetes-metrics-server
