--- a/apps/base/infra-kubernetes-metrics-server/deploy/manifests/base/apiservice.yaml
+++ b/apps/base/infra-kubernetes-metrics-server/deploy/manifests/base/apiservice.yaml
@@ -4,11 +4,11 @@ kind: APIService
 metadata:
   name: v1beta1.metrics.k8s.io
 spec:
-  group: metrics.k8s.io
-  groupPriorityMinimum: 100
-  insecureSkipTLSVerify: true
   service:
     name: metrics-server
-    namespace: infra-kubernetes-metrics-server
+    namespace: kube-system
+  group: metrics.k8s.io
   version: v1beta1
+  insecureSkipTLSVerify: true
+  groupPriorityMinimum: 100
   versionPriority: 100
