--- a/apps/base/infra-kubernetes-metrics-server/deploy/manifests/base/service.yaml
+++ b/apps/base/infra-kubernetes-metrics-server/deploy/manifests/base/service.yaml
@@ -3,11 +3,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: metrics-server
-  namespace: infra-kubernetes-metrics-server
+  namespace: kube-system
 spec:
-  selector:
-    app.kubernetes.io/name: metrics-server
-    app.kubernetes.io/component: metrics-server
   ports:
   - name: https
     port: 443
