--- a/apps/base/infra-ntfy/deploy/ntfy/statefulSet.yaml
+++ b/apps/base/infra-ntfy/deploy/ntfy/statefulSet.yaml
@@ -15,24 +15,14 @@ spec:
         app.kubernetes.io/name: ntfy
         app.kubernetes.io/component: ntfy
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 65534 # nobody
+        fsGroup: 65534
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       initContainers:
-      - name: create-data-dir
-        image: "registry.lan/ntfy-busybox:1.36.0"
-        imagePullPolicy: IfNotPresent
-        command:
-          - "sh"
-          - "-c"
-          - |
-            rm -Rf /app/data/cache
-            rm -Rf /app/data/data
-            mkdir -p /app/data/cache
-            mkdir -p /app/data/data
-            chown -R 65534:65534 /app/data/*
-        securityContext:
-          readOnlyRootFilesystem: true
-        volumeMounts:
-        - name: ntfy-data
-          mountPath: /app/data
       - name: manage-users
         image: "registry.lan/ntfy:v2.3.1-amd64"
         imagePullPolicy: IfNotPresent
@@ -40,10 +30,11 @@ spec:
           - "sh"
           - "/opt/manage_users.sh"
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 65534 # nobody
-          runAsGroup: 65534
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         volumeMounts:
         - name: cluster-config
           mountPath: /etc/localtime
@@ -70,10 +61,11 @@ spec:
         - containerPort: 8080
           name: http
         securityContext:
-          runAsNonRoot: true
-          runAsUser: 65534 # nobody
-          runAsGroup: 65534
           readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         readinessProbe:
           httpGet:
             scheme: HTTP
