--- a/apps/base/logging-elasticsearch/deploy/exporter/deployment.yaml
+++ b/apps/base/logging-elasticsearch/deploy/exporter/deployment.yaml
@@ -21,7 +21,11 @@ spec:
     spec:
       securityContext:
         runAsNonRoot: true
-        runAsUser: 1000
+        runAsUser: 65534 # nobody
+        fsGroup: 65534
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: elastic-exporter
         image: "registry.lan/elasticsearch_exporter:1.1.0"
@@ -36,23 +40,11 @@ spec:
         - name: "ES_CA"
           value: "/etc/ssl/cluster/ca.crt"
         securityContext:
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
           capabilities:
             drop:
-            - SETPCAP
-            - MKNOD
-            - AUDIT_WRITE
-            - CHOWN
-            - NET_RAW
-            - DAC_OVERRIDE
-            - FOWNER
-            - FSETID
-            - KILL
-            - SETGID
-            - SETUID
-            - NET_BIND_SERVICE
-            - SYS_CHROOT
-            - SETFCAP
-          readOnlyRootFilesystem: true
+              - ALL
         livenessProbe:
           httpGet:
             path: /health
